--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 subprojects {
     apply plugin: 'java'
 
+    sourceCompatibility = '1.7'
+    targetCompatibility = '1.7'
+
     repositories {
        mavenCentral()
     }
